src/test/ui/match/match-tag-nullary.rs
// error-pattern: mismatched types

enum a { A, }
enum b { B, }

fn main() { let x: a = a::A; match x { b::B => { } } }
